--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.437.0",
     "next": "14.2.7",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.0",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.6.0",
